20220525 Bug Fix: chatroom scrollbar issue

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -2,7 +2,9 @@
 
 $main-theme: #4A90E2;
 $secondary-color: #2ec4b6;
-
+.c-layout {
+    overflow: hidden;
+}
 .vh-100 {
   height: 100vh;
 }
@@ -16,7 +18,15 @@ $secondary-color: #2ec4b6;
 }
 
 .h-20 {
-    height: 20%;
+  height: 20%;
+}
+
+.h-max {
+  height: 50vh;
+}
+
+.overflow-scroll {
+  overflow-y: scroll;
 }
 
 .c-list {
